--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="contact-button">
         <div class="button">
           <a class="btn" href="mailto:dejanmalinov@yahoo.com">CONTACT ME</a>
-          <p>ilina malinova</p>
+          <p>vgfvjhfjbhgjhkhnk</p>
         </div>
       </div>
     </div>
