--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <!--END OF SECTION THREE-------------------------------------------------->
 
   <!--FOOTER------------------------------------------------------------>
-  <footer class="footer" id="footer">
+  <footer class="footer-container" id="footer">
      <div class="footer-left">
        <div class="footer-logo">
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" viewBox="0 0 100 22" width="100" height="22"><defs><text id="f25TmlLqXZ" x="9.82" y="10" font-size="21" font-family="Archivo Black" font-weight="700" font-style="normal" letter-spacing="0" alignment-baseline="before-edge" transform="matrix(1 0 0 1 -9.824561403508682 -14.454856842383656)" style="line-height:100%" xml:space="preserve" dominant-baseline="text-before-edge"><tspan x="9.82" dy="0em" alignment-baseline="before-edge" dominant-baseline="text-before-edge" text-anchor="start">valtech</tspan></text><style id="archivoblack700normal">
