--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
 
   <!--SECTION THREE-------------------------------------------------------->
   <section id="section-three">
-    <h4 class="section-three-title">Section three</h4>
+    <div class="contact-form">
+      <div class="section-three-title">
+        <h4>Section three</h4>
+      </div>
     <div class="input-form">
       <div class="input-form-title">
         <h3>CONTACT ME</h3>
@@ -152,6 +155,8 @@
         </div>
       </div>
     </div>
+    </div>
+    
   </section>  
   <!--END OF SECTION THREE-------------------------------------------------->
 
