--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="contact-button">
         <div class="button">
           <a class="btn" href="mailto:dejanmalinov@yahoo.com">CONTACT ME</a>
-          <p>vgfvjhfjbhgjhkhnk</p>
+          <p>dejanmalinov@yahoo.com</p>
         </div>
       </div>
     </div>
@@ -74,8 +74,9 @@
            <p class="teaser-text">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
            </p>
+           <div class="teaser-button">Read more</div>
          </div>
-         <div class="teaser-button">Read more</div>
+         
       </article>
       <article class="teaser">
         <figure class="teaser-image">
@@ -86,8 +87,8 @@
           <p class="teaser-text">
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
           </p>
+          <div class="teaser-button">Read more</div>
         </div>
-        <div class="teaser-button">Read more</div>
      </article>
      <article class="teaser">
       <figure class="teaser-image">
@@ -98,8 +99,8 @@
         <p class="teaser-text">
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
         </p>
+        <div class="teaser-button">Read more</div>
       </div>
-      <div class="teaser-button">Read more</div>
    </article>
    <article class="teaser">
     <figure class="teaser-image">
@@ -110,8 +111,8 @@
       <p class="teaser-text">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
       </p>
+      <div class="teaser-button">Read more</div>
     </div>
-    <div class="teaser-button">Read more</div>
   </article>
       </div>
     </div>
