--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </style><path d="M225.17 65.48L248.67 65.48L248.67 73.48L225.17 73.48L225.17 65.48Z" id="a7LGrciKKF"></path></defs><g><g><g id="boTlG7ndV"><use xlink:href="#d1FUZzi8hw" opacity="1" fill="#000503" fill-opacity="1"></use></g><g><use xlink:href="#a7LGrciKKF" opacity="1" fill="#000503" fill-opacity="1"></use></g></g></g></svg>
   </div>
   <ul class="nav-links">
-    <li>
+    <li id="nl">
       <a href="#section-one">Section one</a>
     </li>
     <li>
@@ -207,6 +207,8 @@
     </div>
      
   </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script src="index.js"></script>
 </body>
