--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
      </article>
      <article class="teaser">
       <figure class="teaser-image">
-         <img src="images/Satellite-Imaging.jpg" alt="earth images">
+         <img src="images/river.jpg" alt="earth images">
       </figure>
       <div class="teaser-content">
         <h3 class="teaser-title">Teaser title</h3>
@@ -104,7 +104,7 @@
    </article>
    <article class="teaser">
     <figure class="teaser-image">
-       <img src="images/Satellite-Imaging.jpg" alt="earth images">
+       <img src="images/mountain.jpg" alt="earth images">
     </figure>
     <div class="teaser-content">
       <h3 class="teaser-title">Teaser title</h3>
